# django-dotnetid

./: .gitignore  README.rst  setup.cfg
django_dotnetid/: apps.py  views.py
django_dotnetid.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
